@startuml
!pragma layout smetana
top to bottom direction

package  "SchoolYear Aggregate" {
    entity "<<Root>>\n <<Entity>>\n SchoolYear" {
    +SchoolYear(descriptionVO, startDate : dateVO, endDate : dateVO)
    +isSameSchoolYear(otherSchoolYear: SchoolYear)
    +equals(Object: o)
}
}

class SchoolYearRepositoryImpl {
    +schoolYearRepository(schoolYearFactory: SchoolYearFactory, schoolYearListFactory: SchoolYearListFactory)
    +addSchoolYear(descriptionVO, startDate : dateVO, endDate : dateVO)
    +schoolYearExists(schoolYear: SchoolYear)
    +getLatestSchoolYear(): SchoolYear
    +getAllSchoolYears(): List<SchoolYear>
}

class US07_IWantToCreateASchoolYearController {
   +US07_IWantToCreateASchoolYearController(schoolYearRepository: SchoolYearRepository)
   +addSchoolYear(descriptionVO, startDate : dateVO, endDate : dateVO)
}

interface SchoolYearListFactory <<interface>> {
   +newArrayList(): List<SchoolYear>
}

class SchoolYearListFactoryImpl {
   +newArrayList(): List<SchoolYear>
}

interface SchoolYearFactory <<interface>> {
   +createSchoolYear(descriptionVO, startDate : dateVO, endDate : dateVO): SchoolYear
}

class SchoolYearFactoryImpl {
   +createSchoolYear(descriptionVO, startDate : dateVO, endDate : dateVO): SchoolYear
}

interface List<SchoolYear> <<interface>> {
}

class "<<Value Object>>\n DescriptionVO" {
    -_description : String
    }

class "<<Value Object>>\n DateVO" {
          -date: LocalDate
    }

interface ISchoolYearRepository {
    +schoolYearRepository(schoolYearFactory: SchoolYearFactory, schoolYearListFactory: SchoolYearListFactory)
        +addSchoolYear(descriptionVO, startDate : dateVO, endDate : dateVO)
        +schoolYearExists(schoolYear: SchoolYear)
        +getLatestSchoolYear(): SchoolYear
        +getAllSchoolYears(): List<SchoolYear>
}

SchoolYearListFactoryImpl "1 " ..u.|> "1  " SchoolYearListFactory
ISchoolYearRepository "1" ...> "schoolYearListFactory \n 1" SchoolYearListFactory
ISchoolYearRepository "1 " .u..> "schoolYearFactory \n 1" SchoolYearFactory
US07_IWantToCreateASchoolYearController "1" ---> "schoolYearRepository \n 1" ISchoolYearRepository
SchoolYearFactoryImpl "*" ...|> "SchoolYearFactory \n 1" SchoolYearFactory
SchoolYearFactory "1   " ...> "1 " "<<Root>>\n <<Entity>>\n SchoolYear": <<create>>
SchoolYearListFactory "1" ...> "1  " List: <<create>>
SchoolYearListFactory "1  " ..> "1  " "<<Root>>\n <<Entity>>\n SchoolYear"
"<<Value Object>>\n DescriptionVO" "1  " <-- "\n             1     " "<<Root>>\n <<Entity>>\n SchoolYear"
"<<Value Object>>\n DateVO" "1  " <-- "\n    1    " "<<Root>>\n <<Entity>>\n SchoolYear"
ISchoolYearRepository <|.. SchoolYearRepositoryImpl
@enduml